// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Venue actions action to set the showMap 1`] = `
Object {
  "payload": Object {
    "showMap": false,
  },
  "type": "SET_VENUE_MAP",
}
`;

exports[`[STORE] - Venue actions action to set the showMap 2`] = `
Object {
  "payload": Object {
    "showMap": true,
  },
  "type": "SET_VENUE_MAP",
}
`;

exports[`[STORE] - Venue actions action to set the showMapLink 1`] = `
Object {
  "payload": Object {
    "showMapLink": true,
  },
  "type": "SET_VENUE_MAP_LINK",
}
`;

exports[`[STORE] - Venue actions action to set the showMapLink 2`] = `
Object {
  "payload": Object {
    "showMapLink": false,
  },
  "type": "SET_VENUE_MAP_LINK",
}
`;

exports[`[STORE] - Venue actions action to set the venue 1`] = `
Object {
  "payload": Object {
    "venue": 99,
  },
  "type": "SET_VENUE",
}
`;

exports[`[STORE] - Venue actions action to set the venue removal 1`] = `
Object {
  "payload": Object {
    "venue": undefined,
  },
  "type": "SET_VENUE",
}
`;

exports[`[STORE] - Venue actions action to toggle the venue map 1`] = `
Object {
  "type": "TOGGLE_VENUE_MAP",
}
`;

exports[`[STORE] - Venue actions action to toggle the venueMapLink 1`] = `
Object {
  "type": "TOGGLE_VENUE_MAP_LINK",
}
`;

exports[`[STORE] - Venue thunk actions Initial set of state 1`] = `
Array [
  Object {
    "payload": Object {
      "venue": 99,
    },
    "type": "SET_VENUE",
  },
  Object {
    "payload": Object {
      "showMap": true,
    },
    "type": "SET_VENUE_MAP",
  },
  Object {
    "payload": Object {
      "showMapLink": true,
    },
    "type": "SET_VENUE_MAP_LINK",
  },
]
`;
